update: event participants

--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -1238,3 +1238,52 @@ html, body{
     font-size: 16px;
     color: #333;
 }
+
+
+/* ---------------------question----------------------------- */
+.event-email{
+    display: inline-block;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    cursor: pointer;
+}
+
+
+.email-input {
+    width: 100%;
+    padding-right: 30px; /* make space for the icon */
+    box-sizing: border-box;
+}
+
+.tooltip {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    color: #888;
+    cursor: pointer;
+}
+
+.tooltip .tooltip-text {
+    visibility: hidden;
+    background-color: #333;
+    color: #fff;
+    text-align: left;
+    border-radius: 4px;
+    padding: 6px 10px;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+    right: 25px;
+    width: 220px;
+    font-size: 13px;
+    white-space: normal;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.tooltip:hover .tooltip-text {
+    visibility: visible;
+    opacity: 1;
+}
