--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -1385,3 +1385,7 @@ html, body{
     border-color: #007BFF;
     box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
 }
+
+.calendar-day-date {
+    transition: background-color 0.3s ease;
+}
