--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -1386,6 +1386,6 @@ html, body{
     box-shadow: 0 0 4px rgba(0, 123, 255, 0.5);
 }
 
-.calendar-day-date {
+/* .calendar-day-date {
     transition: background-color 0.3s ease;
-}
+} */
