--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -1392,39 +1392,73 @@ html, body{
 
 
 /* ===============color picked day================== */
-/* Kiểu dáng cho ngày có lớp 'picked' */
-.calendar-day-date.picked {
-  background-color: var(--curr-color); /* Màu nền đã được cập nhật từ JavaScript */
-  color: var(--white, #fff); /* Màu chữ trắng */
-  border-radius: 30%;  /* Viền tròn */
+/* .calendar-day-date.picked {
+  background-color: var(--curr-color);
+  color: var(--white, #fff);
+  border-radius: 30%;
   font-weight: 600;
   font-size: 20px;
   position: relative;
-  box-shadow: 0 0 5px var(--curr-color);  /* Bóng đổ với màu đã lưu */
-  transition: all 0.3s ease-in-out;  /* Hiệu ứng chuyển động mượt mà khi thay đổi */
+  box-shadow: 0 0 5px var(--curr-color);
+  transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
 
-/* Khi hover trên ngày đã chọn */
 .calendar-day-date.picked:hover {
-  transform: scale(1.1);  /* Phóng to nhẹ khi hover */
-  box-shadow: 0 0 10px var(--curr-color);  /* Tăng độ bóng đổ khi hover */
+  transform: scale(1.1);
+  box-shadow: 0 0 10px var(--curr-color);
   transition: all 0.3s ease-in-out;
 }
 
-/* Hiệu ứng khi ngày được chọn (active) */
 .calendar-day-date.picked.active {
-  border: 2px solid var(--curr-color);  /* Viền nổi bật khi được chọn */
-  background-color: var(--curr-color);  /* Màu nền khi click */
-  color: var(--white, #fff);  /* Chữ màu trắng */
+  border: 2px solid var(--curr-color);
+  background-color: var(--curr-color);
+  color: var(--white, #fff);
 }
 
-/* Chỉ thị nhỏ bên trong ngày */
 .calendar-day-date.picked span {
   position: absolute;
   top: 5px;
   right: 5px;
   font-size: 12px;
-  color: var(--curr-color);  /* Màu nhỏ của chỉ thị */
+  color: var(--curr-color);
+} */
+
+/* == */
+
+
+.calendar-days div.picked,
+.calendar-days div.picked:hover{
+    background-color: var(--curr-color);
+    color: var(--white);
+    border-radius: 30%;
+    font-weight: 600;
+    font-size: 20px;
+    position: relative;
+    transition: all 0.2s ease-in-out;
+    box-shadow: 0 0 5px var(--curr-color);
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
 }
 
+.calendar-days div.picked:hover{
+    transform: scale(1.1);
+    box-shadow: 0 0 20px var(--curr-color);
+}
+
+.dark .calendar-days div.picked{
+    background-color: red;
+    color: var(--dark-text);
+    box-shadow: 0 0 5px red;
+}
+
+.dark .calendar-days div.picked:hover{
+    background-color: red;
+    color: var(--dark-text);
+    box-shadow: 0 0 20px rgb(255, 0, 0),
+                0 0 30px #ff9999;
+}
+
+.calendar-days div.picked span{
+    display: none;
+}
