--- a/Date Count/style.css
+++ b/Date Count/style.css
@@ -480,6 +480,7 @@ html, body{
 }
 
 .month-list.hide {
+    display: none;
     opacity: 0;
     transition: all 0.5s ease-in-out;
     transform: scale(2);
@@ -1605,4 +1606,13 @@ button {
 
 label{
     visibility: hidden;
+}
+
+
+label.disabled {
+    color: gray;
+    opacity: 0.5;
+    display: none;
+    cursor: not-allowed;
+    pointer-events: none; /* Makes label unclickable */
 }
