--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -23,6 +23,8 @@ body {
     object-fit: cover;
     opacity: 0; /* Initially hide the image */
     transition: opacity 0.5s ease-in-out; /* Smooth fade-in */
+    opacity: 0;
+    display: none; /* Hide the image by default */;
 }
 
 #image.lazy.loaded {
@@ -34,5 +36,5 @@ body {
     font-size: 20px;
     font-weight: bold;
     color: #333;
-    display: block;  /* Show the loading text initially */
+    display: none; /* Hide it by default */
 }
