update: display details, bug: not display elements after click(switch to another)

--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -64,6 +64,12 @@ body {
     padding: 10px;
     border-radius: 10px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    max-width: 270px; /* Adjusted to fit the content */
+}
+
+#pokemon-flavorText {
+    word-wrap: break-word; /* Allow text to wrap */
+    overflow-wrap: break-word; /* Allow text to wrap */
 }
 
 @media screen and (max-width: 1080px) {
