--- a/Pokemon API Practice/card.css
+++ b/Pokemon API Practice/card.css
@@ -4,10 +4,16 @@
     border-radius: 12px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
     overflow: hidden;
-    position: relative;
+    position: fixed;
+    display: flex;
+    flex-direction: column;
+    bottom: 20px;
+    right: 20px;
+    padding: 10px;
     color: white;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     margin: 20px auto;
+    max-width: 270px; /* Adjusted to fit the content */
 }
 
 .card-container:hover {
@@ -89,6 +95,8 @@
     margin-top: 20px;
     font-size: 14px;
     color: #ecf0f1;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 }
 
 .card-footer{
@@ -98,4 +106,29 @@
     text-align: center;
     border-top: 1px solid #fff;
     color: #dcdcdc;
+}
+
+@media screen and (max-width: 1080px) {
+    body {
+        flex-direction: column;
+        align-items: center;
+        display: block;
+        position: relative;
+    }
+
+    .image-container {
+        width: 100%;
+        height: auto;
+        padding: 10px;
+        padding-left: 10px;
+        margin: 10px 0;
+    }
+
+    .card-container{
+        position: relative;
+        display: block;
+        right: 20px;
+        max-width: 100%; /* Allow full width on smaller screens */
+    }
+    
 }
