--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -154,3 +154,32 @@ button:hover {
   background: #c11d5e;
   transform: scale(1.1);
 }
+
+
+
+
+
+/* --- close btn ---- */
+
+.close-btn {
+  opacity: 100000 ;
+  display: block;
+  background: red;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  color: #333;
+  padding: 0;
+  line-height: 1;
+  transition: color 0.2s ease, transform 0.2s ease;
+}
+
+.close-btn:hover {
+  color: #e74c3c;
+  transform: scale(1.2);
+}
+
+.close-btn:focus {
+  outline: none;
+  box-shadow: 0 0 0 2px rgba(216, 44, 108, 0.5);
+}
