--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -21,6 +21,8 @@ body {
   flex: 1 1 300px;
   background: #eee;
   text-align: center;
+
+  transition: all 0.6s ease, box-shadow 0.2s ease, transform 0.9s ease, background 0.2s ease;
 }
 
 .card-image img {
@@ -28,6 +30,7 @@ body {
   height: auto;
   max-width: 300px;
   padding: 20px;
+  transition: all 0.6s ease, box-shadow 0.2s ease, transform 0.5s ease, background 0.2s ease;
 }
 
 .card-details {
@@ -40,6 +43,7 @@ body {
   border-left: 5px solid #d82c6c;
   position: relative;
   box-shadow: inset 0 0 8px rgba(216, 44, 108, 0.1);
+  transition: all 0.6s ease, box-shadow 0.2s ease, transform 0.5s ease, background 0.2s ease;
 }
 
 .card-details h1 {
@@ -186,11 +190,19 @@ button:hover {
 }
 
 
-.card-image.active + .card-details{
-  display: none;
+.card-image:hover{
+  cursor: pointer;
 }
 
-.card-image.active{
+.card-image.active + .card-details{
+  /* display: none; */
+  opacity: 0;
+
+  transform: translateX(50px);
+  transition: opacity 0.7s ease, transform 0.9s ease;
+}
+
+.card-image.active {
   display: flex;
   top: 0px;
   height: auto;
@@ -199,11 +211,39 @@ button:hover {
   position: relative;
   width: 50%;
   height: 100%;
-    
+  transform:  translateX(55%) translateY(25%);
+  scale: 1.5;
+  transition: all 1s ease, box-shadow 0.2s ease, transform 0.9s ease, background 0.2s ease;
+}
+
+.card-image.active{
+  /* display: flex;
+  top: 0px;
+  height: auto;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 50%;
+  height: 100%; */
+
+  /* position: fixed; */
+  /* transform: translateX(-20%);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: auto;
+  max-width: 650px;
+  background: rgba(0, 0, 0, 0.95);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+  transition: all 0.6s ease, box-shadow 0.2s ease, transform 0.2s ease, background 0.2s ease;
+     */
 }
 
 .card-image.active img {
-  display: block; /* Show the image when active */
+  /* display: block;
   object-fit: cover;
   opacity: 1000;
   padding: 30px;
@@ -211,7 +251,27 @@ button:hover {
   max-width: 650px;
   min-width: 650px;
   height: 100%;
-  transition: opacity 0.5s ease-in-out; /* Smooth fade-in */
+  transition: opacity 0.5s ease-in-out;
+   */
+/* 
+  width: 100%;
+  max-width: 90vw;
+  max-height: 90vh;
+  object-fit: contain;
+  padding: 20px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); */
 }
+
+/* 
+.card-image.active::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.85);
+  z-index: -1;
+} */
 
 /* // */
