--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -4,7 +4,49 @@ body {
   margin: 0;
   padding: 20px;
   display: flex;
+  user-select: none;
 }
+
+.image-container {
+    display: flex;
+    top: 50px;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    margin: 10px;
+    /* width: auto;
+    height: auto; */
+    width: 600px; /*same as image */
+    height: 825px; /*same as image */
+}
+
+#image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0; /* Initially hide the image */
+    transition: opacity 0.5s ease-in-out; /* Smooth fade-in */
+    opacity: 0;
+    display: none; /* Hide the image by default */;
+}
+
+#image:hover{
+    cursor: pointer; /* Change cursor to pointer on hover */
+}
+
+#image.lazy.loaded {
+    opacity: 1;
+}
+
+#loading-text {
+    position: absolute;
+    font-size: 20px;
+    font-weight: bold;
+    color: #333;
+    display: none; /* Hide it by default */
+}
+
 
 .card-container {
   display: flex;
@@ -160,7 +202,16 @@ button:hover {
   transform: scale(1.1);
 }
 
+p{
+  transition: all 0.3s ease, opacity 0.2s ease, transform 0.2s ease, background 0.2s ease;
+}
 
+p:hover {
+  color: #d82c6c;
+  text-decoration: underline;
+  cursor: pointer;
+  scale: 1.05;
+}
 
 
 
