--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -5,6 +5,9 @@ body {
   padding: 20px;
   display: flex;
   user-select: none;
+
+  justify-content: center;
+    align-items: center;
 }
 
 .image-container {
@@ -13,8 +16,9 @@ body {
     height: auto;
     justify-content: center;
     align-items: center;
-    position: relative;
-    margin: 10px;
+
+    /* position: relative; */
+    /* margin: 10px; */
     /* width: auto;
     height: auto; */
     width: 600px; /*same as image */
@@ -47,6 +51,36 @@ body {
     display: none; /* Hide it by default */
 }
 
+#poke-input{
+  background: rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+#poke-input:focus{
+  border-color: #d82c6c;
+  box-shadow: 0 0 8px rgba(216, 44, 108, 0.2);
+  scale: 1.1;
+}
+
+input[type="text"]{
+  width: 100%;
+  padding: 12px 16px;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  outline: none;
+  transition: all 0.3s ease, border-color 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+input[type="text"]:focus {
+  border-color: #d82c6c;
+  box-shadow: 0 0 8px rgba(216, 44, 108, 0.2);
+  scale: 1.1;
+}
 
 .card-container {
   display: flex;
