--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -23,6 +23,7 @@ body {
     height: auto; */
     width: 600px; /*same as image */
     height: 825px; /*same as image */
+    flex-direction: column;
 }
 
 #image {
@@ -80,6 +81,38 @@ input[type="text"]:focus {
   border-color: #d82c6c;
   box-shadow: 0 0 8px rgba(216, 44, 108, 0.2);
   scale: 1.1;
+}
+
+.result-box{
+  margin-top: 10px;
+  padding: 10px;
+  width: 105%;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+}
+
+.result-box ul{
+  /* border-top: 1px solid #999; */
+  padding: 15px 10px;
+  border-radius: 10px;
+}
+
+.result-box ul li{
+  list-style: none;
+  padding: 8px;
+  border-bottom: 1px solid #eee;
+  font-size: 16px;
+  color: #333;
+  transition: all 0.3s ease, opacity 0.2s ease, transform 0.2s ease, background 0.2s ease;
+}
+
+.result-box ul li:hover {
+  border-radius: 10px;
+  background: #ffe6f0;
+  cursor: pointer;
+  transform: scale(1.05);
+  color: #d82c6c;
+  text-decoration: underline;
 }
 
 .card-container {
