--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -25,6 +25,7 @@ body {
     height: auto; */
     width: 600px; /*same as image */
     height: 825px; /*same as image */
+    flex-direction: column;
 }
 
 #image {
@@ -92,5 +93,79 @@ body {
         display: block;
         right: 20px;
     }
+    
+}
+
+
+/* input styling */
+#poke-name{
+  background: rgba(255, 255, 255, 0.1);
+  padding: 20px;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+#poke-name:focus{
+  border-color: #d82c6c;
+  box-shadow: 0 0 8px rgba(216, 44, 108, 0.2);
+  scale: 1.1;
+}
+
+input[type="text"]{
+  width: 100%;
+  padding: 12px 16px;
+  font-size: 16px;
+  border: 2px solid #ccc;
+  border-radius: 10px;
+  outline: none;
+  transition: all 0.3s ease, border-color 0.2s ease, border-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+input[type="text"]:focus {
+  border-color: #d82c6c;
+  box-shadow: 0 0 8px rgba(216, 44, 108, 0.2);
+  scale: 1.1;
+}
+
+
+/* autocomplete */
+.result-box{
+  margin-top: 10px;
+  padding: 10px;
+  width: 105%;
+  border: 2px solid #ccc;
+  border-radius: 8px;
+  transition: all 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+}
+
+.result-box ul{
+  /* border-top: 1px solid #999; */
+  padding: 15px 10px;
+  border-radius: 10px;
+}
+
+.result-box ul li{
+  list-style: none;
+  padding: 8px;
+  border-bottom: 1px solid #eee;
+  font-size: 16px;
+  color: #333;
+  transition: all 0.3s ease, opacity 0.2s ease, transform 0.2s ease, background 0.2s ease;
+}
+
+.result-box ul li:hover {
+  border-radius: 10px;
+  background: #ffe6f0;
+  cursor: pointer;
+  transform: scale(1.05);
+  color: #d82c6c;
+  text-decoration: underline;
+}
+
+.result-box:hover {
+  border-color: #d82c6c;
+  box-shadow: 0 0 5px rgba(216, 44, 108, 0.5);
     
 }
