--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -138,6 +138,9 @@ input[type="text"]:focus {
   border: 2px solid #ccc;
   border-radius: 8px;
   transition: all 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+  max-height: 200px;
+  overflow-y: auto;
+
 }
 
 .result-box ul{
