chore: styling icon & btn

--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -172,3 +172,51 @@ input[type="text"]:focus {
   box-shadow: 0 0 5px rgba(216, 44, 108, 0.5);
     
 }
+
+.fa-arrows-rotate{
+  position: relative;
+  right: 15px;
+  margin-left: 20px;
+  padding: 0;
+  color: #d82c6c;
+  cursor: pointer;
+  transition: transform 0.5s ease, scale 0.5s ease, color 0.3s ease;
+  font-size: 20px;
+}
+
+.fa-arrows-rotate:hover{
+  transform: rotate(270deg);
+  color: #ff4d7a;
+  scale: 1.5;
+}
+
+
+#myButton{
+  background: rgba(255, 255, 255, 0.1);
+  padding: 10px;
+  border-radius: 20px;
+  backdrop-filter: blur(10px);
+  box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  position: relative;
+  right: 15px;
+  top: 15px;
+  cursor: pointer;
+  transition: all 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
+}
+
+#myButton:hover{
+  border-color: #d82c6c;
+  box-shadow: 0 0 8px rgba(216, 44, 108, 0.2);
+  background: #ffe6f0;
+  scale: 1.1;
+}
+
+/* .fa-arrows-rotate{
+  position: absolute;
+  right: 15px;
+  top: 18px;
+  color: #d82c6c;
+  cursor: pointer;
+  transition: transform 0.5s ease;
+} */
