--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -349,3 +349,12 @@ p:hover {
   transform: scale(1.1) translateY(10%);
   transition: all 0.6s ease, box-shadow 0.2s ease, transform 0.5s ease, background 0.2s ease;
 }
+
+#closeSearch{
+  position: absolute;
+  right: 15px;
+  top: 18px;
+  color: #d82c6c;
+  cursor: pointer;
+  transition: transform 0.5s ease;
+}
