--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -268,14 +268,24 @@ input[type="text"]:focus {
 
 /* all pokemon list styling */
 .gallery {
-  display: grid;
+  /* display: grid; */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+
+
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 10px;
+  gap: 30px;
   padding: 20px;
 }
 
 .gallery img {
-  width: 100%;
+  /* width: 100%; */
+  width: 300px;
+  height: 200px;
+  
+  
   cursor: pointer;
   border-radius: 8px;
   transition: transform 0.3s;
@@ -283,6 +293,7 @@ input[type="text"]:focus {
 
 .gallery img:hover {
   transform: scale(1.05);
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
 }
 
 /* Lightbox Styles */
