--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -282,8 +282,9 @@ input[type="text"]:focus {
 
 .gallery img {
   /* width: 100%; */
-  width: 300px;
-  height: 200px;
+  height: 100%;
+  width: auto;
+  object-fit: contain;
   
   
   cursor: pointer;
