--- a/Pokemon API Practice/style.css
+++ b/Pokemon API Practice/style.css
@@ -271,19 +271,34 @@ input[type="text"]:focus {
   /* display: grid; */
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: flex-start;
+  /* justify-content: center; */
+  justify-content: flex-start;
+  /* align-items: flex-start; */
 
 
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  /* grid-template-columns: repat(auto-fit, minmax(250px, 1fr)); */
   gap: 30px;
   padding: 20px;
 }
 
+.gallery .item{
+  position: relative;
+  width: calc(20% - 30px);
+  /* padding-bottom: 70%; */
+  /* opttion 1: */
+    /* height: 200px; */
+}
+
+
 .gallery img {
   /* width: 100%; */
-  height: 100%;
+  /* height: 100%;
   width: auto;
+  object-fit: contain;
+  flex-basis: calc(25% - 30px); */
+
+  width: 100%;
+  height: auto;
   object-fit: contain;
   
   
