--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -283,6 +283,31 @@ p{
   cursor: pointer; /* Thay đổi con trỏ thành hình bàn tay */
 }
 
+#prices{
+  display: block;
+}
+
+#tcg-market, 
+#card-market{
+  margin-right: 5px;
+}
+
+#prices div {
+  display: flex;
+  align-items: center;
+}
+
+#priceIn{
+  transition: all 0.3s ease;
+}
+
+#priceIn:hover{
+  scale: 1.1;
+  text-decoration: underline;
+  cursor: pointer;
+  color: red;
+}
+
 
 
 /* --- close btn ---- */
