--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -306,7 +306,7 @@ p{
 }
 
 #priceIn{
-  transition: all 0.3s ease;
+  transition: all 0.3 ease, transform 0.5s ease-in-out;
 }
 
 #priceIn:hover{
@@ -317,8 +317,38 @@ p{
 }
 
 #priceItems{
+  display: inline-block;
+  padding: 0px 10px;
+  margin: 0 10px 10px 0;  /* Khoảng cách giữa các phần tử */
   list-style-type: none;
-  margin-left: 20px;
+  width: auto;
+  transition: all 0.2s ease-in-out;
+}
+
+#price{
+  display: inline-block;
+  transition: all 0.3s ease;
+  margin-left: 5px;
+}
+
+#price:hover{
+  font-weight: 600;
+  text-decoration: underline;
+  color: #99003d;
+  cursor: pointer;
+  transform: scale(1.3);
+}
+
+#priceItems:hover{
+  background-color: #f5e1e6;
+  scale: 1.1;
+}
+
+#market-priceList,
+#tcg-priceList{
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: 10px;
 }
 
 /* --- close btn ---- */
