--- a/Pokemon API Practice/example/style.css
+++ b/Pokemon API Practice/example/style.css
@@ -498,3 +498,32 @@ button #reloadBtn{
     cursor: pointer;
 }
 
+
+
+.damage-container {
+  margin-top: 10px;
+  width: 100%;
+  height: 30px;
+  background-color: #ddd;
+  border-radius: 20px;
+  position: relative;
+}
+
+.damage-bar {
+  height: 100%;
+  background-color: #ff3a3a;
+  border-radius: 20px;
+  width: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.damage-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  font-weight: bold;
+}
