--- a/Pokemon API Practice/game/style.css
+++ b/Pokemon API Practice/game/style.css
@@ -88,7 +88,7 @@ canvas {
     /* width: 100px;
     height: 140px; */
     width: 30%;
-    height: auto;   
+    height: auto;
     background: linear-gradient(135deg, #f093fb 0%, #f5576c 100%);
     border-radius: 15px;
     border: 3px solid gold;
@@ -102,6 +102,32 @@ canvas {
     animation: cardReveal 0.5s ease-out forwards;
     opacity: 0;
     transform: scale(0.5) rotateY(180deg);
+}
+
+.card:hover{
+    cursor: pointer;
+}
+
+.card-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.6s;
+}
+
+.card:hover .card-inner {
+    transform: rotateY(180deg); /* Lật thẻ khi hover */
+}
+
+.card-front, .card-back {
+    /* position: absolute; */
+    width: 100%;
+    height: 100%;
+    border-radius: 15px;
+    border: 3px solid gold;
+    backface-visibility: hidden; /* Ẩn mặt phía sau khi bị quay ngược */
+    overflow: hidden;
 }
 
 @keyframes cardReveal {
@@ -199,9 +225,9 @@ canvas{
     object-fit: cover;
 }
 
-.back{
+/* .back{
     position: absolute;
     backface-visibility: hidden; /* Hide the back when flipped */
-    transform: rotateY(180deg); /* Initially rotated to hide */
-    z-index: -1; /* Make sure the back is behind the front */
-}
+    /*transform: rotateY(180deg); /* Initially rotated to hide */
+    /*z-index: -1; /* Make sure the back is behind the front */
+/* } 
