--- a/Pokemon API Practice/game/style.css
+++ b/Pokemon API Practice/game/style.css
@@ -235,13 +235,23 @@ canvas {
 ._img{
     z-index: 1;
     user-select: none;
-    position: absolute;
+    position: absolute !important;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     scale: 1.03;
     object-fit: cover;
+}
+
+._img img{
+    position: absolute !important;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    /* overflow: visible; */
 }
 
 canvas{
