--- a/Pokemon API Practice/game/style.css
+++ b/Pokemon API Practice/game/style.css
@@ -38,7 +38,16 @@ body {
     position: absolute;
     width: 100%;
     height: 100%;
-    cursor: crosshair;
+    /* cursor: crosshair; */
+    cursor: url(assets/scissors.png) 16 16, auto;
+}
+
+.pack-wrapper #sliceCanvas{
+    cursor: none !important;
+}
+
+.pack-wrapper #cutAreaCanvas{
+    cursor: url(assets/scissors.png) 16 16, auto;
 }
 
 canvas {
